--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
 # Site settings
 title: Chowdown
-email: your-email@domain.com
+email: lvdt88@gmail.com 
 description: The plain text recipe database for hackers
-baseurl: "https://chowdown.io"
+baseurl: ""
+host: 0.0.0.0
 language: "en"
 lang_direction: "ltr"
-color: "#007FFF"
-twitter_username: clarklab
-github_username:  clarklab
+color: "#ffaa00"
+twitter_username: LvdT1988
+github_username: LvdT 
 
 # Build settings
 markdown: kramdown
